<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SharedPreferences</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tv_label_add_info">Add Information</string>
    <string name="tv_Name">Name</string>
    <string name="tv_Class">Class</string>
    <string name="tv_Enroll_no">Enroll No</string>
    <string name="tv_Save">Save</string>
    <string name="tv_Display">Display</string>

</resources>
